@@ -1,7 +1,7 @@
           Release Notes for NEdit Version 5.6, November 2009
 
 
-$Id: ReleaseNotes,v 1.63.2.6 2009/11/07 13:16:56 lebert Exp $
+$Id: ReleaseNotes,v 1.63.2.7 2010/07/05 06:36:17 lebert Exp $
 
 This file contains last minute notes to users about the release, which are not
 included in the documentation or README files included with the distribution
@@ -24,6 +24,9 @@ New Features in 5.6
 
 
 Bugs fixed in 5.6
+
+  - Fix raising of windows from within nedit (e.g. when opening an already
+    opened document with nc). Patch is SF patch #2337783.
 
   - Fix for SF bug #2858723: off-by-one error causing a crash
 
